--- a/Aimbot.vcxproj
+++ b/Aimbot.vcxproj
@@ -161,6 +161,7 @@
     <ClInclude Include="LocalPlayer.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="Player.h" />
+    <ClInclude Include="Vector.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp" />
